# script-tool

./: CMakeLists.txt
script-tool/: BytesHelper.cpp  BytesHelper.h  Extractor.cpp  Extractor.h  Font.cpp  Font.h  FontDef.cpp  FontDef.h  Inserter.cpp  Inserter.h  Pointer.cpp  Pointer.h  PointerTable.cpp  PointerTable.h  PointerTableDef.cpp  PointerTableDef.h  Table.cpp  Table.h  TextBlock.cpp  TextBlock.h  TextBlockDef.cpp  TextBlockDef.h  libscript.h  main.cpp  script_tool.1
script-tool.xcodeproj/: project.pbxproj
script-tool.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
script-tool.xcodeproj/project.xcworkspace/xcuserdata/manz.xcuserdatad/: UserInterfaceState.xcuserstate
script-tool.xcodeproj/xcuserdata/manz.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
script-tool.xcodeproj/xcuserdata/manz.xcuserdatad/xcschemes/: libfont.xcscheme  libscript.xcscheme  script-tool.xcscheme  xcschememanagement.plist
